@@ -160,6 +160,8 @@ Release 2.7.1 - 2015-07-06
   IMPROVEMENTS
 
   OPTIMIZATIONS
+    MAPREDUCE-6376. Add avro binary support for jhist files (Ray Chiang via
+    jlowe)
 
   BUG FIXES
 
